# cs-demo-parser-rs

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  MIGRATING.md  README.md  debugging_checklist.md  entity_population_checklist.md  rustfmt.toml
demoinfocs-rs/: Cargo.toml  README.md  build.rs
demoinfocs-rs/demos/: esea_mdl_ot.dem  faceit_ecs_ot.dem  starseries_ot.dem  unexpected_end_of_demo.dem
demoinfocs-rs/demos/set/: 2015-01-23-MLGXGAMES2015-Groups-clg-vs-ldlc-dust2.dem  2016-11-30-ELEAGUESeason2-dignitas-vs-sk-dust2.dem  2017-05-20-ESLOneCologneEUClosedQualifier-dignitas-vs-k29-map2-mirage.dem  2020-12-05-operation-broken-fang-matchmaking.dem
demoinfocs-rs/examples/: encrypted_net_messages.rs  entities.rs  heatmap.rs  nade_trajectories.rs  net_messages.rs  print_events.rs  voice_capture.rs  web_assembly.rs
demoinfocs-rs/src/: bitreader.rs  commands.rs  constants.rs  dispatcher.rs  events.rs  game_events.rs  game_state.rs  gamerules.rs  lib.rs  matchinfo.rs  stringtables.rs
demoinfocs-rs/src/common/: bomb.rs  equipment.rs  grenade.rs  hostage.rs  inferno.rs  mod.rs  player.rs
demoinfocs-rs/src/parser/: datatable.rs  mod.rs
demoinfocs-rs/src/proto/: mod.rs
demoinfocs-rs/src/sendtables/: entity.rs  mod.rs  parser.rs  propdecoder.rs  (+2 more)
demoinfocs-rs/tests/: commands.rs  common_bomb.rs  common_inferno.rs  demo_parsing.rs  entity_tracking.rs  equipment.rs  game_events.rs  game_state_grenade.rs  grenade_trajectory.rs  legacy_demo.rs  parser.rs  parser_config.rs  player.rs  sendtables.rs  sendtables2.rs  steamid.rs  user_messages.rs
(+226 files in other folders)
