
[workspace]
members = [".", "demoinfocs-proto"]

[package]
name = "demoinfocs-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
demoinfocs-proto = { path = "demoinfocs-proto" }
prost = "0.12"
bitstream-io = "1.0"
snap = "1.1"
crossbeam-channel = "0.5"
bitflags = "2.9"
once_cell = "1.21"
ice-crypt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
