[package]
name = "demoinfocs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12"
bitstream-io = "1.0"
snap = "1.1"
crossbeam-channel = "0.5"
bitflags = "2.9"
once_cell = "1.21"

[build-dependencies]
prost-build = "0.12"
sevenz-rust = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
criterion = "0.5"
